# Toolscreen

./: .gitignore  CMakeLists.txt  README.md  ToolscreenVersion.cmake  build.bat
.claude-memory/: MEMORY.md  architecture.md  pie-spike.md  preemptive-nav.md
.github/workflows/: build.yml
lang/: en.json  zh_CN.json
src/: Toolscreen.rc  config_defaults.h  config_toml.cpp  config_toml.h  default.toml  dllmain.cpp  expression_parser.cpp  gui.cpp  gui.h  input_hook.cpp  logic_thread.cpp  logic_thread.h  mirror_thread.cpp  profiler.cpp  render.cpp  render_thread.cpp  render_thread.h  resource.h  translation.cpp  translation.h  utils.cpp  utils.h  version.cpp  version.h  virtual_camera.cpp  virtual_camera.h
src/bootstrap/: dllmain.cpp
src/common/: expression_parser.cpp  expression_parser.h  i18n.cpp  i18n.h  mode_dimensions.cpp  mode_dimensions.h  profiler.cpp  profiler.h  utils.cpp  utils.h  version.h.in
src/config/: config_defaults.h  config_toml.cpp  config_toml.h  default.toml
src/features/: browser_overlay.cpp  browser_overlay.h  fake_cursor.cpp  fake_cursor.h  virtual_camera.cpp  virtual_camera.h  window_overlay.cpp  window_overlay.h
src/gui/: gui.cpp  gui.h  gui_config_io.cpp  gui_controls.cpp  gui_input.cpp  gui_internal.h  gui_runtime.cpp  gui_tabs.h  imgui_cache.cpp  imgui_cache.h  imgui_input_queue.cpp  imgui_input_queue.h  tab_appearance.inl  tab_basic_general.inl  tab_basic_other.inl  tab_hotkeys.inl  tab_images.inl  tab_inputs.inl  tab_mirrors.inl  tab_modes.inl  tab_mouse.inl  tab_settings.inl  tab_supporters.inl  tab_window_overlays.inl
src/gui/tabs/: gui_tabs.h  tab_appearance.inl  tab_basic_general.inl  tab_basic_other.inl  tab_browser_overlays.inl  tab_hotkeys.inl  tab_images.inl  tab_inputs.inl  tab_mirrors.inl  tab_misc.inl  tab_modes.inl  tab_mouse.inl  tab_pie_spike.inl  tab_settings.inl  tab_supporters.inl  tab_window_overlays.inl
src/hooks/: hook_chain.cpp  hook_chain.h  input_hook.cpp  input_hook.h
src/platform/: pch.h  resource.h  resource.rc
src/render/: mirror_thread.cpp  mirror_thread.h  obs_thread.cpp  obs_thread.h  render.cpp  render.h  render_thread.cpp  render_thread.h  shared_contexts.cpp  shared_contexts.h
src/runtime/: logic_thread.cpp
